<resources>
    <string name="app_name">MultiLanguageImplementation</string>

    <string name="welcome">Welcome</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>

    <string-array name="languages">
        <item>Choose Language</item>
        <item>Deutsch</item>
        <item>franÃ§ais</item>
        <item>English</item>
        <item>Ø§Ù„Ø¹Ø±Ø¨ÙŠØ©</item>
    </string-array>

</resources>
